--- a/css/style.css
+++ b/css/style.css
@@ -1,230 +1,278 @@
-*{
-    color: black;
-    font-size: 10px;
-    margin: 0;
-    padding: 0;
+/* _variables.scss */
+/* _base.scss */
+/* _variables.scss */
+* {
+  color: black;
+  font-size: 10px;
+  margin: 0;
+  padding: 0;
 }
 
-/*-------Seccion del body---------*/
-body{
-    background-color: #1a1a1a !important;
-    font-family: "Reddit Mono", monospace !important;
-    font-optical-sizing: auto !important;
-    font-weight: 700 !important;
-    font-style: normal !important;
-    font-size: x-large !important;
-}
-body{
-    display: grid;
-    min-height: 100vh;
-    grid-template-rows: auto 1fr auto;
+body {
+  background-color: #0d1117 !important;
+  font-family: "Reddit Mono", monospace !important;
+  font-optical-sizing: auto !important;
+  font-weight: 700 !important;
+  font-style: normal !important;
+  font-size: x-large !important;
+  display: grid;
+  min-height: 100vh;
+  grid-template-rows: auto 1fr auto;
 }
 
-/*-------Seccion (h1-h6)--------*/
-h2{
-        color: rgb(245, 89, 115) !important;
-        text-align: center !important;
-        font-size: 3rem !important;
-        padding: 1rem !important;
-    }
-
-/*-------Seccion enlaces general-------*/
-a{
-        text-decoration: none !important;
-        color: white !important;
-        font-weight: 700 !important;
-}
-.enlace_blanco{
-        color: rgb(228, 187, 187);
-        text-decoration: none;
-    }
-
-/*---------Seccion del header---------*/
-header{
-    align-items: center;
-    display: flex;
-    justify-content: space-between;
-    background-color: #453C3C;
-    padding: 1rem;
-    height: 7.5rem;
-    margin-top: 2rem;
-}
-.container_nav{
-    display: flex;
-    position: relative;
-    right: 23rem;
-}
-@media (max-width: 600px){
-    .container_nav{
-        flex-direction: column;
-    }
-    nav{
-        padding: 1rem 0rem;
-    }
-    .Logo{
-        margin: auto;
-    }
-}
-h1{
-    display: flex;
-    align-items: center;
-    color: black;
-    font-size: 5rem;
-}
-.nombre{
-    display: flex;
-    align-items: center;
-    color: black
-}
-.Logo{
-    height: 11rem;
-    display: flex;
-    margin-right: 1.5rem;
-    color: black;
+a {
+  text-decoration: none !important;
+  color: white !important;
+  font-weight: 700 !important;
 }
 
-nav a{
-    padding-right: 5rem !important;
-    font-size: 3rem !important;
-}
-nav a:hover{
-    color: black !important;
-}
-
-.input{
-    justify-content: space-between;
-    padding: 1rem;
-    align-items: center;
-    border-radius: 2.5rem;
-    border-width: medium;
-    border-style: solid;
-    border-color: black;
-}
-::placeholder{
-    color: black;
-    font-size: 1.3rem;
-    padding: 0.5rem;
+/* _typography.scss */
+/* _variables.scss */
+h1, h2 {
+  color: rgb(250, 96, 96) !important;
+  text-align: center !important;
+  font-size: 5rem !important;
+  padding: 1rem !important;
+  font-weight: 900 !important;
 }
 
-/*--------Seccion del footer---------*/
-footer{
-    bottom: 0;
-    background-color: #fb6666;
-    padding: 1rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 1rem;
-}
-footer h2{
-    font-size: 2rem !important;
-    font-weight: 900 !important;
-    color: black !important;
-}
-footer h3{
-    font-size: 4rem;
-}
-footer li{
-    display: flex;
-}
-.contenedor {
-    display: table;
-    position: relative;
-    right: 40rem;
-}
-.contenidos {
-    display: table-row;
-}
-.columna1, .columna2, .columna3 {
-    display: table-cell;
-    padding-right: 5rem;
-}
-.columna1_li{
-    display: flex;
-    justify-content: center;
-    padding-top: 1rem;
-}
-.columna2_li{
-    padding-top: 3rem;
-    display: flex;
-    justify-content: center;
-}
-.columna3_li{
-    display: flex;
-    justify-content: center;
-}
-footer a{
-    color: black !important;
-    padding: 1rem !important;
-    font-size: 1.8rem !important;
-    font-weight: 400 !important;
-}
-footer a:hover{
-    color: whitesmoke !important;
-}
-.logo_ig{
-    height: 4rem;
-    position: relative;
-    left: 1;
-}
-.logo_face{
-    height: 5rem;
-    position: relative;
-    bottom: 0.5rem;
-}
-.logo_tk{
-    height: 4rem;
-    position: relative;
-}
-.logos{
-    display: flex;
-    position: relative;
-    right: 54rem;
-    top: 10rem;
-}
-.rositas_foot{
-    height: 18rem !important;
-    width: 22rem !important;
-    position: relative;
-}
-.floresD{
-    position: relative;
-    right: 33rem;
-    bottom: 3rem;
-}
-.circulo{
-    height: 25rem;
-    position: relative;
-    left: 55rem;
-}
-/*con esta clase pongo los enlaces de el footer en blanco para que el usuario sepa en cual se encuentra (simplemente estetica)*/
-.blanco{
-    color: white;
-    font-weight: 900;
-}
-.spanf{
-    font-size: 1rem;
-    font-weight: 600;
-    position: relative;
-    left: 90rem;
-    top: 12rem;
-    white-space: nowrap;
+h2 {
+  font-size: 5rem !important;
+  padding: 1rem !important;
+  font-weight: 900 !important;
 }
 
-/*------Seccion del Main-------*/
-.section_h2{
-    font-weight: 1000 !important;
-    font-size: 5rem !important;
+main section .container .row .col {
+  background-color: #090909;
+  padding: 10px;
+  margin: 10px;
+  border-radius: 15rem;
+  margin-top: 3rem;
+  margin-bottom: 5rem;
+  box-shadow: 0px 0px 15px 10px rgb(243, 84, 84);
 }
-section p{
-    color: whitesmoke;
-    font-weight: 500;
-    font-size: 3rem;
+
+.card {
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0 4px 6px 2px rgb(250, 96, 96);
 }
-section a{
-    font-size: 3rem;
+.card.section-card {
+  box-shadow: 0 4px 6px 2px rgb(250, 96, 96);
 }
-section img{
-    height: 25rem;
-    padding: 2rem;
+.card.section-card:hover {
+  box-shadow: 0 8px 12px 2px rgb(250, 107, 107);
 }
+
+.card-body {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+.card-title {
+  flex-grow: 1;
+}
+
+.custom-btn {
+  background-color: black;
+  border-color: black;
+  color: white;
+}
+.custom-btn:hover {
+  background-color: #333;
+  border-color: #333;
+}
+
+/* _variables.scss */
+footer {
+  background-color: #fb6666;
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 2rem;
+  margin-bottom: 1.5rem;
+}
+footer h2 {
+  font-size: 2rem !important;
+  font-weight: 900 !important;
+  color: black !important;
+}
+footer a {
+  color: black !important;
+  padding: 1rem;
+  font-size: 1.8rem;
+  font-weight: 400;
+  text-decoration: none !important;
+}
+footer a:hover {
+  color: #eee3e3 !important;
+}
+footer .circulo {
+  height: 15rem;
+}
+footer .logo_ig, footer .logo_tk {
+  height: 6rem;
+}
+footer .logo_face {
+  height: 7.7rem;
+  position: relative;
+  bottom: 0.9rem;
+}
+footer .flores {
+  height: 15rem;
+}
+footer .spanf {
+  position: relative;
+  top: 2rem;
+}
+footer .container {
+  text-align: center;
+}
+footer .container .row {
+  margin-bottom: 2rem;
+}
+footer .container .row:last-child {
+  margin-bottom: 0;
+}
+footer .container .col {
+  padding: 1rem;
+}
+footer .container .col h2 {
+  font-size: 2rem;
+  font-weight: 900;
+  color: black;
+}
+footer .container .col a {
+  color: black;
+  padding: 1rem;
+  font-size: 1.8rem;
+  font-weight: 400;
+}
+footer .container .col a:hover {
+  color: #fff;
+}
+
+/* _header.scss */
+/* _variables.scss */
+header {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  background-color: #333333;
+  padding: 1rem;
+  height: 7.5rem;
+  margin-top: 2rem;
+}
+header .container_nav {
+  display: flex;
+  position: relative;
+  right: 23rem;
+}
+@media (max-width: 600px) {
+  header .container_nav {
+    flex-direction: column;
+  }
+  header nav {
+    padding: 1rem 0rem;
+  }
+  header .Logo {
+    margin: auto;
+  }
+}
+header h1 {
+  display: flex;
+  align-items: center;
+  color: black;
+  font-size: 5rem;
+}
+header .nombre {
+  display: flex;
+  align-items: center;
+  color: black;
+}
+header .Logo {
+  height: 11rem;
+  display: flex;
+  margin-right: 1.5rem;
+  color: black;
+}
+header nav a {
+  padding-right: 5rem !important;
+  font-size: 3rem !important;
+}
+header nav a:hover {
+  color: rgb(250, 96, 96) !important;
+}
+header .input {
+  justify-content: space-between;
+  padding: 1rem;
+  align-items: center;
+  border-radius: 2.5rem;
+  border-width: medium;
+  border-style: solid;
+  border-color: black;
+  position: relative;
+}
+header ::placeholder {
+  color: black;
+  font-size: 1.3rem;
+  padding: 0.5rem;
+}
+
+/* _main.scss */
+/* _variables.scss */
+main {
+  padding: 2rem 0;
+}
+main .section-card {
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0px 0px 7px 7px rgb(250, 96, 96) !important;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+main .section-card:hover {
+  box-shadow: 0px 0px 15px 15px rgba(250, 107, 107, 0.979) !important;
+}
+main .section-card .image-container {
+  width: 100%;
+  height: 0;
+  padding-bottom: 75%;
+  position: relative;
+}
+main .section-card .image-container img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 5px;
+  object-fit: contain;
+}
+main .section-card .card-body {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+main .section-card .card-body h5 {
+  flex-grow: 1;
+  text-align: center;
+  font-size: 2.5rem;
+}
+main .section-card .card-body a {
+  font-size: 3rem;
+  margin-top: auto;
+  background-color: black; /* Cambiado a negro */
+  border-color: black; /* Cambiado a negro */
+  color: #ffffff;
+}
+main .section-card .card-body a:hover {
+  background-color: #333333;
+  border-color: #1a1a1a;
+}
+
+/*# sourceMappingURL=style.css.map */
