--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,78 +1,97 @@
 
-/* _header.scss */
 @import '../utils/variables';
 
 header {
-    align-items: center;
+  background-color: $secondary-color;
+  padding: 1rem 0;
+
+  .navbar {
     display: flex;
     justify-content: space-between;
-    background-color: $secondary-color;
-    padding: 1rem;
-    height: 7.5rem;
-    margin-top: 2rem;
+    align-items: center;
+    width: 100%;
 
-    .container_nav {
+    .navbar-brand {
+      img {
+        height: 40px; // Ajusta la altura de la imagen del logo
+      }
+    }
+
+    .navbar-toggler {
+      border: none;
+      background: transparent;
+      &:focus {
+        outline: none;
+      }
+    }
+
+    .navbar-collapse {
+      justify-content: center;
+
+      .navbar-nav {
         display: flex;
-        position: relative;
-        right: 23rem;
-    }
+        justify-content: center;
+        margin: auto;
+        .nav-link {
+          padding-right: 4rem;
+          padding-left: 6rem; // Ajusta este valor según sea necesario
+          font-size: 3rem; // Ajusta este valor según sea necesario
+          color: rgb(0, 0, 0) !important;
+          font-weight: 800 !important;
+          text-shadow: 0 0 5px #fb7171, 0 0 10px rgba(255, 112, 112, 0.979), 0 0 20px rgba(250, 107, 107, 0.979), 0 0 30px rgba(250, 107, 107, 0.979), 0 0 40px rgba(250, 107, 107, 0.979);
 
-    @media (max-width: 600px) {
-        .container_nav {
-            flex-direction: column;
+          &:hover {
+            color: rgb(246, 246, 246) !important;
+          }
         }
-        nav {
-            padding: 1rem 0rem;
-        }
-        .Logo {
-            margin: auto;
-        }
+      }
     }
 
-    h1 {
-        display: flex;
-        align-items: center;
-        color: black;
-        font-size: 5rem;
-    }
-
-    .nombre {
-        display: flex;
-        align-items: center;
-        color: black;
-    }
-
-    .Logo {
-        height: 11rem;
-        display: flex;
-        margin-right: 1.5rem;
-        color: black;
-    }
-
-    nav a {
-        padding-right: 5rem !important;
-        font-size: 3rem !important;
-
-        &:hover {
-            color: $highlight-color !important;
-        }
-    }
-
-    .input {
-        justify-content: space-between;
-        padding: 1rem;
-        align-items: center;
-        border-radius: 2.5rem;
-        border-width: medium;
-        border-style: solid;
-        border-color: black;
-        position: relative;
-    }
-
-    ::placeholder {
-        color: black;
-        font-size: 1.3rem;
+    .search-input {
+      display: flex;
+      align-items: center;
+      padding-right: 10rem;
+      input {
+        width: 150px;
+        height: 3.5rem;
         padding: 0.5rem;
+        background-color: white !important;
+        border-radius: 5rem;
+        border: 3px solid rgb(2, 2, 2);
+
+        &::placeholder {
+          color: rgb(0, 0, 0);
+          font-size: 1.4rem;
+        }
+      }
     }
+  }
+
+  @media (max-width: 600px) {
+    .navbar {
+      flex-direction: column;
+      padding: 1rem 0;
+
+      .navbar-brand {
+        margin: auto;
+      }
+
+      .navbar-collapse {
+        justify-content: center;
+
+        .navbar-nav {
+          flex-direction: column;
+
+          .nav-link {
+            padding-right: 0 !important;
+            padding-bottom: 1rem !important;
+            text-decoration: none !important;
+            font-size: 1rem !important;
+            color: white !important;
+          }
+        }
+      }
+    }
+  }
 }
 
