--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -14,7 +14,12 @@ h2 {
     padding: 1rem !important;
     font-weight: 900 !important;
 }
+
 main{ 
+  p{
+    color: white !important;
+    font-size: 2.5rem;
+  }
   section{
     .container{ 
       .row{
