--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -10,11 +10,12 @@ header {
     justify-content: space-between;
     align-items: center;
     width: 100%;
+    padding: 0.5rem 1rem; // Reduce el padding del navbar para mantener su tamaño
 
-    .navbar-brand {
-      img {
-        height: 40px; // Ajusta la altura de la imagen del logo
-      }
+    .navbar-brand img {
+      height: 10.5rem !important;
+      margin-top: -40px;
+      margin-bottom: -55px;
     }
 
     .navbar-toggler {
@@ -32,16 +33,38 @@ header {
         display: flex;
         justify-content: center;
         margin: auto;
+
         .nav-link {
+          position: relative;
           padding-right: 4rem;
           padding-left: 6rem; // Ajusta este valor según sea necesario
           font-size: 3rem; // Ajusta este valor según sea necesario
           color: rgb(0, 0, 0) !important;
           font-weight: 800 !important;
           text-shadow: 0 0 5px #fb7171, 0 0 10px rgba(255, 112, 112, 0.979), 0 0 20px rgba(250, 107, 107, 0.979), 0 0 30px rgba(250, 107, 107, 0.979), 0 0 40px rgba(250, 107, 107, 0.979);
+          transition: transform 0.3s ease-in-out, color 0.3s ease-in-out, text-shadow 0.3s ease-in-out;
+
+          &::after {
+            content: '';
+            position: absolute;
+            left: 0;
+            bottom: -5px; // Ajusta la posición vertical de la línea
+            width: 100%;
+            height: 5px; // Ajusta el grosor de la línea
+            background: linear-gradient(90deg, rgba(255, 112, 112, 0.979) 15%, rgba(0, 0, 0, 0.979) 100%);
+            transform: scaleX(0);
+            transform-origin: left;
+            transition: transform 0.3s ease-in-out;
+          }
 
           &:hover {
             color: rgb(246, 246, 246) !important;
+            transform: scale(1.3);
+            text-shadow: 0 0 10px rgba(255, 112, 112, 0.979), 0 0 20px rgba(255, 112, 112, 0.979), 0 0 30px rgba(255, 112, 112, 0.979), 0 0 40px rgb(255, 255, 255);
+
+            &::after {
+              transform: scaleX(1);
+            }
           }
         }
       }
@@ -94,4 +117,11 @@ header {
     }
   }
 }
+
+
+
+
+
+
+
 
