--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -9,12 +9,6 @@ h1, h2 {
     font-weight: 900 !important;
 }
 
-h2 {
-    font-size: 5rem !important;
-    padding: 1rem !important;
-    font-weight: 900 !important;
-}
-
 main{ 
   p{
     color: white !important;
@@ -31,6 +25,7 @@ main{
           margin-top: 3rem; 
           margin-bottom: 5rem; 
           box-shadow: 0px 0px 15px 10px rgb(243, 84, 84);
+          text-shadow: 0 0 5px #fff, 0 0 10px rgba(255, 255, 255, 0.979), 0 0 20px rgba(250, 107, 107, 0.979), 0 0 30px rgba(250, 107, 107, 0.979), 0 0 40px rgba(255, 255, 255, 0.979), 0 0 50px rgba(255, 255, 255, 0.979), 0 0 60px rgba(0, 0, 0, 0.979); 
         }
       }
     }
