--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -8,10 +8,7 @@ main {
         display: flex;
         flex-direction: column;
         box-shadow: 0px 0px 7px 7px rgb(250, 96, 96) !important;
-        margin-bottom: 1rem;
-        margin-top: 2.5rem;
-        margin-left: 0.5rem;
-        margin-right: 0.5rem;
+        margin: 2.5rem 0.5rem 1rem;
 
         &:hover {
             box-shadow: 0px 0px 15px 15px rgba(250, 107, 107, 0.979);
@@ -48,8 +45,8 @@ main {
             a {
                 font-size: 3rem;
                 margin-top: auto;
-                background-color: black; /* Cambiado a negro */
-                border-color: black; /* Cambiado a negro */
+                background-color: black;
+                border-color: black;
                 color: #ffffff;
 
                 &:hover {
@@ -57,25 +54,24 @@ main {
                     border-color: darken($secondary-color, 10%);
                 }
             }
-
         }
     }
-    section{
-        .container{
-            .circuloM{
-                color: none !important;
 
+    section {
+        .container {
+            .circuloM {
+                color: none !important;
             }
-        .row{
+            .row {
                 .circuloM2 {
                     text-align: center !important;
-                    overflow: hidden !important; /* Asegura que no se desborde el contenedor */
+                    overflow: hidden !important;
                 }
                 .circuloM2 img {
-                    max-width: 100% !important; /* Asegura que la imagen no exceda el ancho del contenedor */
-                    height: auto !important;   /* Mantiene la proporción de la imagen */
+                    max-width: 100% !important;
+                    height: auto !important;
                 }
-                .circuloM2{
+                .circuloM2 {
                     background-color: transparent !important;
                     border: none !important;
                     box-shadow: none !important;
@@ -86,4 +82,42 @@ main {
         }
     }
 }
+
+// Media Queries for responsiveness
+@media (max-width: 768px) {
+    main {
+        .section-card {
+            margin: 1rem 0.5rem;
+
+            .card-body {
+                h5 {
+                    font-size: 1.8rem;
+                }
+
+                a {
+                    font-size: 2rem;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 480px) {
+    main {
+        .section-card {
+            margin: 0.5rem;
+
+            .card-body {
+                h5 {
+                    font-size: 1.5rem;
+                }
+
+                a {
+                    font-size: 1.5rem;
+                }
+            }
+        }
+    }
+}
+
 
